Regression: Click-Drag to select channels in Graph Editor no longer working #104026
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#104026
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Linux
Graphics card: RTX 3070
Blender Version
Broken: 3.2 - latest
Worked: 3.1
Caused by
4d0f846b93
Short description of error
Up until version 3.1 of Blender you could click-drag in the channels from the graph editor/dope sheet to select multiple channels.
From 3.2 onwards the box select never triggers and you can only select 1 channel.
Looking at the code, the keymappings are still there, presumably the event just gets caught before it hits the operator.
Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).
channel_drag.blend
Added subscriber: @ChrisLend
Added subscriber: @ideasman42
@ideasman42 I am not 100% sure but I think this stems from the change from
EVT_TWEAK_L
toLEFTMOUSE
in theblender_default.py
keymap.was there anything inherent to
EVT_TWEAK_L
that made it execute beforeLEFTMOUSE
?Changed status from 'Needs Triage' to: 'Confirmed'
Added subscriber: @PratikPB2123
I found a potential fix by changing the keymap for
anim.channels_click
fromPRESS
toCLICK
Yes it would have, previously handling the PRESS did not suppress the TWEAK event (so selection could optionally tweak afterwards). There were quite a few cases where this bit us, as far as I knew they were all handled. This one slipped through, your fix looks fine (replied).